#
# Copyright (c) 2025 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[workspace]
members = [".", "zenoh-ffi-opaque-types", "prebindgen-project-root"]

[workspace.package]
version = "1.5.0"
repository = "https://github.com/eclipse-zenoh/zenoh-ffi"
homepage = "http://zenoh.io"
authors = ["ZettaScale Zenoh Team, <zenoh@zettascale.tech>"]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]

[package]
name = "zenoh-ffi"
version = { workspace = true }
repository = { workspace = true}
homepage = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
description = "The Zenoh-FFI crate provides a Foreign Function Interface (FFI) for the Zenoh library, allowind to easily implement bindings to other languages"
readme = "README.md"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
shared-memory = ["zenoh-ffi-opaque-types/shared-memory"]
unstable = ["zenoh-ffi-opaque-types/unstable"]
auth_pubkey = ["zenoh-ffi-opaque-types/auth_pubkey"]
auth_usrpwd = ["zenoh-ffi-opaque-types/auth_usrpwd"]
transport_multilink = ["zenoh-ffi-opaque-types/transport_multilink"]
transport_compression = ["zenoh-ffi-opaque-types/transport_compression"]
transport_quic = ["zenoh-ffi-opaque-types/transport_quic"]
transport_serial = ["zenoh-ffi-opaque-types/transport_serial"]
transport_unixpipe = ["zenoh-ffi-opaque-types/transport_unixpipe"]
transport_tcp = ["zenoh-ffi-opaque-types/transport_tcp"]
transport_tls = ["zenoh-ffi-opaque-types/transport_tls"]
transport_udp = ["zenoh-ffi-opaque-types/transport_udp"]
transport_unixsock-stream = ["zenoh-ffi-opaque-types/transport_unixsock-stream"]
transport_ws = ["zenoh-ffi-opaque-types/transport_ws"]
transport_vsock = ["zenoh-ffi-opaque-types/transport_vsock"]
default = [
    "auth_pubkey",
    "auth_usrpwd",
    "transport_multilink",
    "transport_compression",
    "transport_quic",
    "transport_tcp",
    "transport_tls",
    "transport_udp",
    "transport_unixsock-stream",
    "transport_ws",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4.37"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.139"
tracing = "0.1"
rand = "0.9.0"
spin = "0.9.5"
tokio = "*"
unwrap-infallible = "0.1.5"
const_format = "0.2.32"
zenoh = { version = "1.5.0", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", default-features = false, features = [
    "internal",
] }
zenoh-ext = { version = "1.5.0", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", default-features = false, features = [
    "internal",
] }
zenoh-runtime = { version = "1.5.0", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
zenoh-util = { version = "1.5.0", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
flume = "*"
prebindgen-proc-macro = { version = "0.4.0", git = "https://github.com/milyin/prebindgen.git", branch = "main" }
zenoh-ffi-opaque-types = { path = "zenoh-ffi-opaque-types" }

[target.'cfg(unix)'.dependencies]
ctor = "0.4.1"

[build-dependencies]
zenoh = { version = "1.5.0", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", default-features = false, features = [
    "internal",
] }
regex = "1.7.1"
prebindgen = { version = "0.4.0", git = "https://github.com/milyin/prebindgen.git", branch = "main" }
project-root = "0.2.2"
cargo_metadata = "=0.19.0"
cargo-platform = "=0.1.8"
serde_json = "1.0"

[patch]

[patch.crates-io]

[patch.crates-io.prebindgen-project-root]
path = "prebindgen-project-root"

[patch."https://github.com/milyin/prebindgen.git".prebindgen-project-root]
path = "prebindgen-project-root"
