# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "zenoh-c",
    version = "1.4.0",
    compatibility_level = 0,
)

bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")
bazel_dep(name = "rules_rust", version = "0.64.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = [ "1.85.0" ],
)

crate_opaque_types = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate_opaque_types.from_cargo(
    name = "crate_opaque_types",
    cargo_lockfile = "build-resources/opaque-types/Cargo.lock",
    manifests = ["build-resources/opaque-types/Cargo.toml"],
)
use_repo(crate_opaque_types, "crate_opaque_types")

crate_zenoh = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate_zenoh.from_cargo(
    name = "crate_zenoh",
    cargo_lockfile = "Cargo.lock",
    manifests = ["Cargo.toml"],
)
use_repo(crate_zenoh, "crate_zenoh")