#
# Copyright (c) 2025 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
name = "zenoh-ffi-workspace"
version = "1.5.0"
repository = "https://github.com/eclipse-zenoh/zenoh-ffi-workspace"
homepage = "http://zenoh.io"
authors = [
    "ZettaScale Zenoh Team, <zenoh@zettascale.tech>"
]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "The zenoh-ffi-workspace allows to determine path to workspace's Cargo.lock file"
readme = "README.md"
build = "build.rs"

[build-dependencies]
project-root = "0.2"