[package]
name = "opaque-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
shared-memory = ["zenoh/shared-memory", "zenoh-protocol/shared-memory"]
unstable = ["zenoh/unstable", "zenoh-ext/unstable"]
auth_pubkey = ["zenoh/auth_pubkey"]
auth_usrpwd = ["zenoh/auth_usrpwd"]
transport_multilink = ["zenoh/transport_multilink"]
transport_compression = ["zenoh/transport_compression"]
transport_quic = ["zenoh/transport_quic"]
transport_serial = ["zenoh/transport_serial"]
transport_unixpipe = ["zenoh/transport_unixpipe"]
transport_tcp = ["zenoh/transport_tcp"]
transport_tls = ["zenoh/transport_tls"]
transport_udp = ["zenoh/transport_udp"]
transport_unixsock-stream = ["zenoh/transport_unixsock-stream"]
transport_ws = ["zenoh/transport_ws"]
transport_vsock = ["zenoh/transport_vsock"]
stats = ["zenoh/stats"]

panic = [
] # The whole purpose of this project is to generate set of compilation panic messages with calculated structure sizes. To do it the "panic" feature should be set. By default we just want to check if build is successful.
default = ["zenoh/default"]

[dependencies]
zenoh = { version = "1.7.2", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", default-features = false, features = [
    "internal",
] }
zenoh-ext = { version = "1.7.2", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", default-features = false, features = [
    "internal",
] }
zenoh-protocol = { version = "1.7.2", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
const_format = "0.2.32"
flume = "*"
tokio = "*"
